--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup nodejs
         uses: actions/setup-node@v4.1.0
         with:
-          node-version: "18"
+          node-version: "22"
 
       # Install dependencies
       - name: Install deps
@@ -39,6 +39,6 @@ jobs:
       - name: Deploy to Pages
         uses: crazy-max/ghaction-github-pages@v4.1.0
         with:
-          build_dir: dist/
+          build_dir: dist/portfolio
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
