--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,10 @@ jobs:
       - name: Build app bundle
         run: npm run build:prod
 
+      # Route file renaming
+      - name: Rename index for routing
+        run: mv dist/portfolio/index.html dist/portfolio/404.html
+
       # Deploy to Github Pages
       - name: Deploy to Pages
         uses: crazy-max/ghaction-github-pages@v4.1.0
