--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production --base-href https://kevinjimenez.github.io/portfolio/",
+    "build:prod": "ng build --configuration production --base-href /portfolio/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
