--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "dist",
+              "base": "dist/portfolio",
               "browser": ""
             },
             "index": "src/index.html",
